# TrafficSigns

./: README.md
CaroloCup/: CaroloCup.sim
CaroloCup/objects/ParkingSign/: ParkingSign.esObj  ParkingSign.mtl
CaroloCup/objects/SpeedLimitSign/: CancelSpeedLimit.mtl  SpeedLimit.mtl  cancelspeedlimitsign.esObj  speedlimitsign.esObj
CaroloCup/objects/StopSign/: StopSign.mtl  stopsign.esObj
CaroloCup/worlds/: carolo.wld
LEGACY/fromRobot/ORB_DETECTION/: CMakeLists.txt  TSDR.cpp  detector.cpp
LEGACY/fromRobot/ORB_DETECTION-build/: CMakeCache.txt  Makefile  cmake_install.cmake  detector.demo
LEGACY/fromRobot/ORB_DETECTION-build/scripts/: label copy 2.py  label.py  retrained_graph OLD.pb  retrained_graph.pb  tflite_converter.py
LEGACY/fromRobot/ORB_DETECTION-build/scripts/backup/: init.py  label.py
LEGACY/fromRobot/ORB_DETECTION-build/tf_files/: CMakeLists copy.txt  graphERROR.lite  graph_OLD.lite  graph_OLD2.lite  labels.txt  labels_OLD.txt  labels_OLD2.txt
ROBOT COMPATIBILITY FILES/: includes.cpp
clusterbased/: TSDR.hpp  tsr.cpp
clusterbased-build/: CMakeCache.txt  Makefile  TrafficSignRecognition  cmake_install.cmake
clusterbased-build/scripts/: label.py
clusterbased-build/tf_files/: graph.lite  labels.txt  saved_model.pb  tflite_converter.py
clusterbased-build/tf_files/OLD/: graph.lite  labels.txt
clusterbased/backup/: CMakeLists.txt  TSDR.hpp  commands  tsr.cpp  version checking.cpp
