cmake_minimum_required(VERSION 2.8)
project( TrafficSignRecognition )
#SET(CMAKE_CXX_COMPILER /usr/bin/g++)
set(OpenCV_DIR /Users/Jordan/opencv/build)
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS}  )
LINK_DIRECTORIES    (/usr/local/lib)
set (CMAKE_CXX_FLAGS "-std=c++11 -I/usr/local/include -I/usr/X11/include -leyesim -I/Library/Frameworks/Python.framework/Versions/3.7/include/python3.7m -I/Library/Frameworks/Python.framework/Versions/3.7/include/python3.7m -fno-strict-aliasing -Wsign-compare -fno-common -dynamic -DNDEBUG -g -fwrapv -O3 -Wall -g -L/Library/Frameworks/Python.framework/Versions/3.7/lib/python3.7/config-3.7m-darwin -lpython3.7m -ldl -framework CoreFoundation")
add_executable( TrafficSignRecognition tsr.cpp )
target_link_libraries( TrafficSignRecognition ${OpenCV_LIBS} )