cmake_minimum_required(VERSION 2.8)
set(OpenCV_DIR /usr/local/opt/opencv@2/share/OpenCV)
project( keypoints )
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} /usr/local/include -I /usr/X11/include)
LINK_DIRECTORIES    (/usr/local/lib /usr/X11/lib /home/pi/eyebot/lib)
set (CMAKE_CXX_FLAGS "-L/usr/lib/python3.5/config-3.5m-arm-linux-gnueabihf -L/usr/lib -lpython3.5m -lpthread -ldl  -lutil -lm  -I/usr/include/python3.5m -I/usr/include/python3.5m -Xlinker -export-dynamic -Wl,-O1 -Wl,-Bsymbolic-functions -g -pedantic -Wall -lX11 -lpython2.7 -I/home/pi/eyebot/include -L/home/pi/eyebot/lib -lwiringPi -lX11 -pthread -llirc_client -lm -leyebot -lstdc++")
add_executable( detector.demo detector.cpp TSDR.cpp)
target_link_libraries( detector.demo ${OpenCV_LIBS} libeyebot.a)
